--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+before_install:
+- sudo apt install -y libudunits2-0 libudunits2-dev
 
 language: R
 cache: packages
