--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 before_install:
 - sudo apt install -y libudunits2-0 libudunits2-dev
+- sudo apt install libgdal-dev
 
 language: R
 cache: packages
