--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ export(rendersummaryWidget)
 export(summaryWidget)
 export(summaryWidgetOutput)
 importFrom(data.table,fread)
+importFrom(data.table,setnames)
 importFrom(htmlwidgets,createWidget)
