--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
            family = "Gibbs",
            role = c("aut", "cre"),
            email = "lshhg2@lshtm.ac.uk",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           comment = c(ORCID = "0000-0003-4413-453X"))
 Description: An R interface for the JavaScript library rt_vis(<https://github.com/hamishgibbs/rt_vis>).
 License: MIT + file LICENSE
 Encoding: UTF-8
