--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(readInEpiNow2)
 export(rendersummaryWidget)
 export(summaryWidget)
 export(summaryWidgetOutput)
+export(tsWidget)
 importFrom(data.table,fread)
 importFrom(data.table,setnames)
 importFrom(htmlwidgets,createWidget)
