--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(check_input_data)
 export(getSubregionalUrls)
+export(joinRtData)
 export(mapWidget)
 export(readInEpiNow2)
 export(rendersummaryWidget)
@@ -9,5 +10,7 @@ export(summaryWidget)
 export(summaryWidgetOutput)
 export(tsWidget)
 importFrom(data.table,fread)
+importFrom(data.table,rbindlist)
 importFrom(data.table,setnames)
 importFrom(htmlwidgets,createWidget)
+importFrom(purrr,map2)
