--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RtD3
 Title: Rt Visualization in D3
 Version: 0.0.1
-Authors@R:
+Authors@R: c(
     person(given = "Hamish",
            family = "Gibbs",
            role = c("aut", "cre"),
