--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -6,7 +6,7 @@ name: pkgdown
 
 jobs:
   pkgdown:
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
@@ -16,6 +16,12 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@master
 
+
+      - name: Install spatial dependencies
+        run : |
+          apt install -y libudunits2-0 libudunits2-dev
+          apt install libgdal-dev
+          
       - name: Query dependencies
         run: |
           install.packages('remotes')
