--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Install spatial dependencies
         run : |
-          apt-get install -y libudunits2-0 libudunits2-dev
-          apt-get install -y libgdal-dev
+          sudo apt-get install -y libudunits2-0 libudunits2-dev
+          sudo apt-get install -y libgdal-dev
           
       - name: Query dependencies
         run: |
