--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -40,6 +40,7 @@ jobs:
           install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
           remotes::install_dev("pkgdown")
+          install.packages("rnaturalearthhires", repos = "http://packages.ropensci.org", type = "source")
         shell: Rscript {0}
 
       - name: Install package
