--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -22,6 +22,10 @@ jobs:
           sudo apt-get install -y libudunits2-0 libudunits2-dev
           sudo apt-get install -y libgdal-dev
           
+      - name: Install pkgdown dependencies
+        run : | 
+          sudo apt-get install -y libharfbuzz-dev libfribidi-dev
+          
       - name: Query dependencies
         run: |
           install.packages('remotes')
