--- a/inst/htmlwidgets/RtD3.yaml
+++ b/inst/htmlwidgets/RtD3.yaml
@@ -1,23 +1,17 @@
  dependencies:
+   - name: RtD3js
+    version: 1.0.0
+    src: "htmlwidgets/lib/RtD3js-1.0.0"
+    script: main.js
+  - name: React
+    version: 1.0.0
+    src: "htmlwidgets/lib/React-15.7.0"
+    script: react.js
+  - name: ReactDOM
+    version: 1.0.0
+    src: "htmlwidgets/lib/ReactDOM-15.7.0"
+    script: react-dom.js
   - name: d3
-    version: 5.16.0
+    version: 6.2.0
     src: "htmlwidgets/lib/d3-5.16.0"
     script: d3.v5.min.js
-  - name: rtVis
-    version: 1.0
-    src: "htmlwidgets/lib/rtVis-1.0"
-    script: build.min.js
-    stylesheet: styles.css
-  - name: d3-geo-projection
-    version: 2.9.0
-    src: "htmlwidgets/lib/d3-geo-projection-2.9.0"
-    script: d3-geo-projection.v2.min.js
-  - name: jquery
-    version: 3.5.1
-    src: "htmlwidgets/lib/jquery-3.5.1"
-    script: jquery.min.js
-  - name: select2
-    version: 4.1.0
-    src: "htmlwidgets/lib/select2-4.1.0"
-    script: select2.min.js
-    stylesheet: select2.min.css
